@@ -1,3 +1,7 @@
+1999-01-26  Miguel de Icaza  <miguel@nuclecu.unam.mx>
+
+	* gnotravex.c: Kill file menu.
+
 1999-01-10  Nat Friedman  <nat@nat.org>
 
 	* gnotravex.c (create_statusbar): Replaced the GtkStatusBar with a
